--- a/_posts/2025-03-13-Week3.md
+++ b/_posts/2025-03-13-Week3.md
@@ -1,8 +1,8 @@
 ---
 title: "Week 3 Distribusi Data"
 date: 2025-03-06 10:00:00 +0700
-categories: [Chart, Statistik]
-tags: ["Statitik dan Probabilitas", "Visualisasi Data", "R"]
+categories: [Histogram, Statistik, Boxplot, qqplot, Distribusi Normal]
+tags: ["Statitik dan Probabilitas", "Distribusi Data", "R"]
 ---
 
 #### Distribusi data adalah cara suatu data dalam dataset tersebar. Dengan memahami distribusi data kita bisa mendapatkan hasil analisis yang akurat. Distribusi data itu sangat penting karena menentukan metode analisis yang tepat dan memengaruhi bagaimana kita menafsirkan hasil statistik. Tanpa pemahaman yang baik tentang distribusi, analisis data bisa menghasilkan kesimpulan yang keliru. Distribusi juga membantu dalam mengidentifikasi pola, serta memprediksi perilaku data di masa depan. Oleh karena itu, distribusi data menjadi dasar dalam pengambilan keputusan yang berbasis data dan dapat meningkatkan validitas serta keandalan hasil analisis. Beberapa faktor utama yang digunakan untuk memahami distribusi antara lain adalah mean (rata-rata), median (nilai tengah), dan modus (nilai yang paling sering muncul), yang menunjukkan letak pusat data. Selain itu, variance dan standard deviation menggambarkan sebaran atau penyebaran data terhadap pusatnya. Sementara itu, skewness mengindikasikan tingkat kemencengan distribusi, apakah data cenderung ke kiri atau ke kanan, dan kurtosis menunjukkan tinggi atau rendahnya puncak distribusi data. Dengan memperhatikan faktor-faktor ini, kita dapat memperoleh pemahaman yang lebih mendalam mengenai karakteristik data sebelum melakukan analisis lebih lanjut.
@@ -12,70 +12,65 @@ tags: ["Statitik dan Probabilitas", "Visualisasi Data", "R"]
     - Bentuk lonceng, simetris di sekitar mean
     - Mean, median, dan modus sama
     - Banyak fenomena alam mengikuti distribusi ini
+    Contoh: Tinggi badan manusia
+    <img src="/assets/normal.png">
+
 - **Distribusi Uniform**
+    - Semua nilai dalam rentang tertentu memiliki probabilitas yang sama 
+    - Tidak memiliki puncak atau kecenderungan tertentu
+    Contoh: Hasil lemparan dadu yang adil
+    <img src="/assets/uniform.png">
+
 - **Distribusi Eksponensial**
+    - Distribusi untuk waktu antara peristiwa yang terjadi secara acak 
+    - Banyak digunakan dalam analisis kegagalan dan waktu tunggu 
+    Contoh: Waktu antara kedatangan pelanggan di bank
+    <img src="/assets/eksponensial.png">
+
 - **Distribusi Poisson**
+    - Digunakan untuk menghitung jumlah kejadian dalam interval tertentu 
+    - Berfokus pada jumlah kejadian yang jarang terjadi
+    Contoh: Jumlah panggilan ke layanan darurat dalam satu jam
+    <img src="/assets/poisson.png">
+
 - **Distribusi Binomial**
+    - Digunakan untuk eksperimen dengan hasil sukses/gagal
+    - Memiliki parameter jumlah percobaan (n) dan probabilitas sukses (p) 
+    Contoh: Peluang mendapatkan kepala dalam 10 lemparan koin
+    <img src="/assets/binomial.png">
 
-### Terdapat 2 jenis data yang dapat divisualisasikan:
-- **Kuantitatif:**
-    Data berupa angka yang bisa diukur dan dihitung.
-- **Kualitatif:**
-    Data ini berupa ciri atau kategori.
+## Apa itu Distribusi Normal?
+##### Distribusi normal atau yang biasa disebut distribusi *Gauss* adalah distribusi probabilitas yang memiliki bentuk lonceng (bell-shaped). Distribusi normal itu menjadi hal yang penting dalam proses pengambilan data, karena banyak metode statistik mengasumsikan data berdistribusi normal, teorema Limit Pusat: Data besar cenderung mengikuti distribusi normal, serta dengan adanya distribusi normal itu membantu kita dalam memprediksi dan mengambil keputusan berbasis data.
 
-### Ada 11 macam format visualisasi data yang biasa digunakan:
-1. **Bar Chart**
-    Menampilkan data dalam bentuk batang vertikal atau horizontal atau bahkan full stack column. Cocok untuk membandingkan kategori satu dengan lainnya secara visual misal penjualan per produk.
-    <img src="/assets/Bar.png">
+## Selain itu, terdapat 3 visualisasi distribusi untuk melihat distribusi data:
+- **Histogram:**
+    Histogram adalah jenis grafik yang menampilkan distribusi frekuensi dari suatu variabel numerik.
+    Ciri-ciri Histogram berdistribusi normal:
+    - Bentuknya menyerupai lonceng simetris (bell-shaped).
+    - Puncaknya di tengah, kemudian menurun secara simetris ke kiri dan kanan.
+    - Sebagian besar data terkumpul di sekitar mean, dengan lebih sedikit data di ekor.
+    - Contoh Histogram Normal:
+    Jika data memiliki mean = 50 dan standar deviasi = 10, maka sebagian besar data berada di sekitar 50 dengan sedikit data di luar kisaran (30-70).
+    
+    <img src="/assets/Histon.png">
 
-2. **Histogram**
-    Untuk menunjukkan distribusi frekuensi dari data numerik yang kontinu, bukan kategori, cocok untuk melihat frekuensi tinggi badan atau nilai ujian. Terdapat 2 variasi histogram, yaitu Vartical dan Horizontal columns.
-    <img src="/assets/Histogram.png">
+- **Boxplot:**
+    Boxplot adalah ringkasan distribusi sampel yang disajikan secara grafis yang bisa menggambarkan bentuk distribusi data (skewness), ukuran tendensi sentral dan ukuran penyebaran (keragaman) data pengamatan.
+    Ciri-ciri Boxplot berdistribusi normal:
+    - Median berada di tengah kotak (IQR).
+    - Panjang whisker kiri dan kanan kurang lebih sama.
+    - Tidak ada atau sedikit outlier (jika ada outlier, jumlahnya tidak terlalu banyak).
+    - Contoh Boxplot Normal:
+    Jika data normal, maka kotak akan seimbang, dengan median yang membagi kotak menjadi dua bagian yang hampir sama besar.
+    <img src="/assets/boxplotn.png">
 
-3. **Pie Chart**
-    Menunjukkan proporsi data sebagai bagian dari keseluruhan dalam bentuk irisan lingkaran. Cocok untuk persentase pangsa pasar, alokasi anggaran. Ada 2 variasi, yaitu Standard pie chart Donut pie chart.
-    <img src="/assets/Pie.png">
-
-4. **Scatter Plot**
-    Untuk menampilkan hubungan antara dua variabel dalam bentuk titik-titik pada bidang koordinat. Cocok digunakan untuk melihat korelasi, seperti hubungan antara usia dan pendapatan, tinggi dan berat badan. Ada 2 jenis, yaitu Scatter plot dan Scatter plot with grid.
-    <img src="/assets/Scatter.png">
-
-5. **Heat Maps**
-    Visualisasi menggunakan warna untuk menunjukkan kepadatan atau intensitas nilai dalam suatu area. Ddapat digunakan untuk melihat performa siswa per mata pelajaran atau kepadatan trafik situs web. Tersedia dalam 2 varian Mosaic diagram dan Color map.
-    <img src="/assets/Heat.png">
-
-6. **Line Chart**
-    Menampilkan tren atau perubahan nilai dari waktu ke waktu dengan garis yang menghubungkan titik-titik data. Digunakan untuk tren harga saham, suhu harian, atau pertumbuhan pengguna. 
-    <img src="/assets/Line.png">
-
-7. **Bubble Charts**
-    Penambahan dimensi ketiga dari scatterplot. Contoh penggunaan pengeluaran (sumbu X), pendapatan (sumbu Y), dan populasi (ukuran gelembung). Ada 2 jenis yaitu Bubble plot dan Bubble Map
-    <img src="/assets/Bubble.png">
-
-8. **Radar Charts**
-    Menampilkan chart dalam bentuk jaring laba laba. Seringkali digunakan untuk membandingkan beberapa item berdasarkan beberapa kriteria, seperti performa atlet atau fitur produk.
-    <img src="/assets/Radar.png">
-
-9. **Waterfall Charts**
-    Untuk menunjukkan perubahan nilai dari satu titik ke titik lain secara bertahap, digunakan untuk Melacak kontribusi positif dan negatif terhadap total akhir, seperti dalam analisis keuntungan atau arus kas.
-    <img src="/assets/Waterfall.png">
-
-10. **Tree Maps**
-    Menampilkan data hierarkis dalam bentuk kotak bertingkat yang ukurannya proporsional mewakili nilai. Sering digunakan untuk menganalisis kontribusi berbagai bagian dalam satu kelompok besar, seperti komposisi pasar saham berdasarkan sektor industri.
-    <img src="/assets/Tree.png">
-
-11. **Area Chart**
-    Mirip seperti line chart, tetapi dengan area di bawah garis yang diarsir untuk menekankan volume. Ini dapat membantu menunjukkan akumulasi nilai dari waktu ke waktu, seperti total pengeluaran bulanan atau penggunaan energi. Ada 3 jenis Standar Area, Stacked Area, dan 100% stacked area. 
-    <img src="/assets/Area2.png">
-    <img src="/assets/Area1.png">
-
-## Tugas Tambahan
-##### Mahasiswa diminta untuk mengvisualisasi data dengan menggunakan R.
-
-## Kesimpulan
-##### Visualisasi data adalah alat untuk membantu mengomunikasikan informasi secara efektif dan membantu dalam pengambilan keputusan. Dengan menggunakan berbagai jenis grafik seperti bar chart, line chart, pie chart, dan lainnya, kita dapat mengubah data yang kompleks menjadi visual yang mudah dipahami. Proses ini membantu dalam menjelaskan, mengeksplorasi, dan menganalisis data dengan cara yang lebih intuitif.Selain itu, ada dua jenis data yang dapat divisualisasikan, yaitu kuantitatif dan kualitatif, yang masing-masing memiliki teknik visualisasi yang sesuai. Selain itu, beragam format visualisasi dapat digunakan untuk berbagai tujuan, baik untuk membandingkan, menunjukkan distribusi, menganalisis hubungan antar variabel, maupun untuk memahami perubahan data dari waktu ke waktu.
-
-##### Penggunaan visualisasi data yang tepat tidak hanya mempermudah pemahaman tetapi juga meningkatkan daya tarik dan daya ingat terhadap informasi yang disajikan. Oleh karena itu, setiap perusahaan atau organisasi yang ingin mengambil keputusan berbasis data perlu memanfaatkan visualisasi data dengan optimal.
-
-
+- **qqplot:**
+    QQ plot (*Quantile-Quantile plot*) adalah grafik yang digunakan untuk membandingkan distribusi dua set data dengan memplot kuantilnya terhadap satu sama lain.
+    Ciri-ciri qqplot berdistribusi normal:
+    - Titik-titik data mengikuti garis diagonal hampir secara sempurna.
+    - Tidak ada pola melengkung atau penyimpangan signifikan dari garis lurus.
+    - Pada bagian ekor (ujung kiri dan kanan), titik-titik tetap dekat garis tanpa menyimpang terlalu jauh.
+    - Contoh QQ Plot Normal:
+    Jika data normal, titik-titik pada QQ plot akan berjajar rapi di sepanjang garis lurus. Jika data tidak normal, akan ada pola melengkung atau penyimpangan di ujung ekor.
+    <img src="/assets/qqn.png">
 
