--- a/_posts/2025-03-06-Week2.md
+++ b/_posts/2025-03-06-Week2.md
@@ -24,48 +24,48 @@ tags: ["Statitik dan Probabilitas", "Visualisasi Data", "R"]
 ## Ada 11 macam format visualisasi data yang biasa digunakan:
 1. **Bar Chart**
     Menampilkan data dalam bentuk batang vertikal atau horizontal atau bahkan full stack column. Cocok untuk membandingkan kategori satu dengan lainnya secara visual misal penjualan per produk.
-    <img src="/assets/Bar.png">
+    <img src="/assets/Bar.png" alt="">
 
 2. **Histogram**
     Untuk menunjukkan distribusi frekuensi dari data numerik yang kontinu, bukan kategori, cocok untuk melihat frekuensi tinggi badan atau nilai ujian. Terdapat 2 variasi histogram, yaitu Vartical dan Horizontal columns.
-    <img src="/assets/Histogram.png">
+    <img src="/assets/Histogram.png" alt="">
 
 3. **Pie Chart**
     Menunjukkan proporsi data sebagai bagian dari keseluruhan dalam bentuk irisan lingkaran. Cocok untuk persentase pangsa pasar, alokasi anggaran. Ada 2 variasi, yaitu Standard pie chart Donut pie chart.
-    <img src="/assets/Pie.png">
+    <img src="/assets/Pie.png" alt="">
 
 4. **Scatter Plot**
     Untuk menampilkan hubungan antara dua variabel dalam bentuk titik-titik pada bidang koordinat. Cocok digunakan untuk melihat korelasi, seperti hubungan antara usia dan pendapatan, tinggi dan berat badan. Ada 2 jenis, yaitu Scatter plot dan Scatter plot with grid.
-    <img src="/assets/Scatter.png">
+    <img src="/assets/Scatter.png" alt="">
 
 5. **Heat Maps**
     Visualisasi menggunakan warna untuk menunjukkan kepadatan atau intensitas nilai dalam suatu area. Ddapat digunakan untuk melihat performa siswa per mata pelajaran atau kepadatan trafik situs web. Tersedia dalam 2 varian Mosaic diagram dan Color map.
-    <img src="/assets/Heat.png">
+    <img src="/assets/Heat.png" alt="">
 
 6. **Line Chart**
     Menampilkan tren atau perubahan nilai dari waktu ke waktu dengan garis yang menghubungkan titik-titik data. Digunakan untuk tren harga saham, suhu harian, atau pertumbuhan pengguna. 
-    <img src="/assets/Line.png">
+    <img src="/assets/Line.png" alt="">
 
 7. **Bubble Charts**
     Penambahan dimensi ketiga dari scatterplot. Contoh penggunaan pengeluaran (sumbu X), pendapatan (sumbu Y), dan populasi (ukuran gelembung). Ada 2 jenis yaitu Bubble plot dan Bubble Map
-    <img src="/assets/Bubble.png">
+    <img src="/assets/Bubble.png" alt="">
 
 8. **Radar Charts**
     Menampilkan chart dalam bentuk jaring laba laba. Seringkali digunakan untuk membandingkan beberapa item berdasarkan beberapa kriteria, seperti performa atlet atau fitur produk.
-    <img src="/assets/Radar.png">
+    <img src="/assets/Radar.png" alt="">
 
 9. **Waterfall Charts**
     Untuk menunjukkan perubahan nilai dari satu titik ke titik lain secara bertahap, digunakan untuk Melacak kontribusi positif dan negatif terhadap total akhir, seperti dalam analisis keuntungan atau arus kas.
-    <img src="/assets/Waterfall.png">
+    <img src="/assets/Waterfall.png" alt="">
 
 10. **Tree Maps**
     Menampilkan data hierarkis dalam bentuk kotak bertingkat yang ukurannya proporsional mewakili nilai. Sering digunakan untuk menganalisis kontribusi berbagai bagian dalam satu kelompok besar, seperti komposisi pasar saham berdasarkan sektor industri.
-    <img src="/assets/Tree.png">
+    <img src="/assets/Tree.png" alt="">
 
 11. **Area Chart**
     Mirip seperti line chart, tetapi dengan area di bawah garis yang diarsir untuk menekankan volume. Ini dapat membantu menunjukkan akumulasi nilai dari waktu ke waktu, seperti total pengeluaran bulanan atau penggunaan energi. Ada 3 jenis Standar Area, Stacked Area, dan 100% stacked area. 
-    <img src="/assets/Area2.png">
-    <img src="/assets/Area1.png">
+    <img src="/assets/Area2.png" alt="">
+    <img src="/assets/Area1.png" alt="">
 
 ## Tugas Tambahan
 ##### Mahasiswa diminta untuk mengvisualisasi data dengan menggunakan R.
