--- a/_posts/2025-03-13-Week3.md
+++ b/_posts/2025-03-13-Week3.md
@@ -13,31 +13,31 @@ tags: ["Statitik dan Probabilitas", "Distribusi Data", "R"]
     - Mean, median, dan modus sama
     - Banyak fenomena alam mengikuti distribusi ini
     Contoh: Tinggi badan manusia
-    <img src="/assets/normal.png">
+    <img src="/assets/normal.png" alt="">
 
 - **Distribusi Uniform**
     - Semua nilai dalam rentang tertentu memiliki probabilitas yang sama 
     - Tidak memiliki puncak atau kecenderungan tertentu
     Contoh: Hasil lemparan dadu yang adil
-    <img src="/assets/uniform.png">
+    <img src="/assets/uniform.png" alt="">
 
 - **Distribusi Eksponensial**
     - Distribusi untuk waktu antara peristiwa yang terjadi secara acak 
     - Banyak digunakan dalam analisis kegagalan dan waktu tunggu 
     Contoh: Waktu antara kedatangan pelanggan di bank
-    <img src="/assets/eksponensial.png">
+    <img src="/assets/eksponensial.png" alt="">
 
 - **Distribusi Poisson**
     - Digunakan untuk menghitung jumlah kejadian dalam interval tertentu 
     - Berfokus pada jumlah kejadian yang jarang terjadi
     Contoh: Jumlah panggilan ke layanan darurat dalam satu jam
-    <img src="/assets/poisson.png">
+    <img src="/assets/poisson.png" alt="">
 
 - **Distribusi Binomial**
     - Digunakan untuk eksperimen dengan hasil sukses/gagal
     - Memiliki parameter jumlah percobaan (n) dan probabilitas sukses (p) 
     Contoh: Peluang mendapatkan kepala dalam 10 lemparan koin
-    <img src="/assets/binomial.png">
+    <img src="/assets/binomial.png" alt="">
 
 ## Apa itu Distribusi Normal?
 ##### Distribusi normal atau yang biasa disebut distribusi *Gauss* adalah distribusi probabilitas yang memiliki bentuk lonceng (bell-shaped). Distribusi normal itu menjadi hal yang penting dalam proses pengambilan data, karena banyak metode statistik mengasumsikan data berdistribusi normal, teorema Limit Pusat: Data besar cenderung mengikuti distribusi normal, serta dengan adanya distribusi normal itu membantu kita dalam memprediksi dan mengambil keputusan berbasis data.
@@ -51,8 +51,8 @@ tags: ["Statitik dan Probabilitas", "Distribusi Data", "R"]
     - Sebagian besar data terkumpul di sekitar mean, dengan lebih sedikit data di ekor.
     - Contoh Histogram Normal:
     Jika data memiliki mean = 50 dan standar deviasi = 10, maka sebagian besar data berada di sekitar 50 dengan sedikit data di luar kisaran (30-70).
-    
-    <img src="/assets/Histon.png">
+
+    <img src="/assets/Histon.png" alt="">
 
 - **Boxplot:**
     Boxplot adalah ringkasan distribusi sampel yang disajikan secara grafis yang bisa menggambarkan bentuk distribusi data (skewness), ukuran tendensi sentral dan ukuran penyebaran (keragaman) data pengamatan.
@@ -62,7 +62,7 @@ tags: ["Statitik dan Probabilitas", "Distribusi Data", "R"]
     - Tidak ada atau sedikit outlier (jika ada outlier, jumlahnya tidak terlalu banyak).
     - Contoh Boxplot Normal:
     Jika data normal, maka kotak akan seimbang, dengan median yang membagi kotak menjadi dua bagian yang hampir sama besar.
-    <img src="/assets/boxplotn.png">
+    <img src="/assets/boxplotn.png" alt="">
 
 - **qqplot:**
     QQ plot (*Quantile-Quantile plot*) adalah grafik yang digunakan untuk membandingkan distribusi dua set data dengan memplot kuantilnya terhadap satu sama lain.
@@ -72,5 +72,17 @@ tags: ["Statitik dan Probabilitas", "Distribusi Data", "R"]
     - Pada bagian ekor (ujung kiri dan kanan), titik-titik tetap dekat garis tanpa menyimpang terlalu jauh.
     - Contoh QQ Plot Normal:
     Jika data normal, titik-titik pada QQ plot akan berjajar rapi di sepanjang garis lurus. Jika data tidak normal, akan ada pola melengkung atau penyimpangan di ujung ekor.
-    <img src="/assets/qqn.png">
+    <img src="/assets/qqn.png" alt="">
 
+## Tugas
+##### Pada week 3 ini kami diberikan tugas untuk melakukan distribusi data dengan menggunakan teknik visualisasi, dengan melakukan plot data menggunakan:
+1. Histogram
+2. BoxPlot
+3. QQ Plot 
+
+## Kesimpulan
+##### Distribusi data merupakan fondasi penting dalam analisis statistik karena membantu kita memahami bagaimana data tersebar, pola yang muncul, dan bagaimana data tersebut dapat digunakan untuk pengambilan keputusan berbasis informasi. Pemahaman terhadap konsep distribusi seperti mean, median, modus, varian, standar deviasi, skewness, dan kurtosis sangat krusial dalam menginterpretasikan karakteristik data. Distribusi normal seringkali menjadi asumsi dasar dalam banyak metode statistik karena karakteristik simetrisnya.
+
+##### Visualisasi seperti histogram, boxplot, dan qqplot berperan penting untuk mengidentifikasi bentuk distribusi secara intuitif dan cepat, membantu menentukan apakah data sesuai dengan distribusi yang diasumsikan.
+
+##### Dengan memahami dan mengenali distribusi data melalui teori dan visualisasi, kita dapat meningkatkan keakuratan analisis, memilih metode statistik yang tepat, serta meminimalkan kesalahan dalam pengambilan kesimpulan dari data.
