--- a/_posts/2025-03-13-Week3.md
+++ b/_posts/2025-03-13-Week3.md
@@ -1,12 +1,7 @@
 ---
 title: "Week 3 Distribusi Data"
 date: 2025-03-06 10:00:00 +0700
-categories: 
-    - Histogram
-    - Statistik
-    - Boxplot
-    - qqplot
-    - Distribusi Normal
+categories: [Histogram, Statistik, Boxplot, qqplot, Distribusi Normal]
 tags: ["Statitik dan Probabilitas", "Distribusi Data", "R"]
 ---
 
