--- a/_posts/2025-03-06-Week2.md
+++ b/_posts/2025-03-06-Week2.md
@@ -9,7 +9,7 @@ tags: ["Statitik dan Probabilitas", "Visualisasi Data", "R"]
 
 ## Umumnya terdapat 3 aspek dalam laporan dan pernyataan yang terbantu melalui visualisasi data:
 - **Menjelaskan**
-    Visualisasi data membuka kesempatan bagi kita untuk menjelaskan jawaban atas sebuah pertanyaan lewat visual. 
+    Visualisasi data membuka kesempatan bagi kita untuk menjelaskan sebuah pertanyaan lewat visual. 
 - **Mengeksplorasi**
     Visual juga membuka peluang bagi kita agar dapat mengidentifikasi area yang paling menarik bagi kita.
 - **Menganalisis**
