--- a/_posts/2025-03-06-Week2.md
+++ b/_posts/2025-03-06-Week2.md
@@ -1,5 +1,5 @@
 ---
-title: "Week 2 Visualisasi Data"
+title: "Materi Visualisasi Data"
 date: 2025-03-06 10:00:00 +0700
 categories: [Chart, Statistik, Histogram]
 tags: ["Statitik dan Probabilitas", "Visualisasi Data", "R"]
