--- a/_posts/2025-03-13-Week3.md
+++ b/_posts/2025-03-13-Week3.md
@@ -5,84 +5,152 @@ categories: [Histogram, Statistik, Boxplot, qqplot, Distribusi Normal]
 tags: ["Statitik dan Probabilitas", "Distribusi Data", "R"]
 ---
 
-#### Distribusi data adalah cara suatu data dalam dataset tersebar. Dengan memahami distribusi data kita bisa mendapatkan hasil analisis yang akurat. Distribusi data itu sangat penting karena menentukan metode analisis yang tepat dan memengaruhi bagaimana kita menafsirkan hasil statistik. Tanpa pemahaman yang baik tentang distribusi, analisis data bisa menghasilkan kesimpulan yang keliru. Distribusi juga membantu dalam mengidentifikasi pola, serta memprediksi perilaku data di masa depan. Oleh karena itu, distribusi data menjadi dasar dalam pengambilan keputusan yang berbasis data dan dapat meningkatkan validitas serta keandalan hasil analisis. Beberapa faktor utama yang digunakan untuk memahami distribusi antara lain adalah mean (rata-rata), median (nilai tengah), dan modus (nilai yang paling sering muncul), yang menunjukkan letak pusat data. Selain itu, variance dan standard deviation menggambarkan sebaran atau penyebaran data terhadap pusatnya. Sementara itu, skewness mengindikasikan tingkat kemencengan distribusi, apakah data cenderung ke kiri atau ke kanan, dan kurtosis menunjukkan tinggi atau rendahnya puncak distribusi data. Dengan memperhatikan faktor-faktor ini, kita dapat memperoleh pemahaman yang lebih mendalam mengenai karakteristik data sebelum melakukan analisis lebih lanjut.
+# Distribusi Data
 
-## Beberapa jenis hasil Distribusi Data:
-- **Distribusi Normal**
-    - Bentuk lonceng, simetris di sekitar mean
-    - Mean, median, dan modus sama
-    - Banyak fenomena alam mengikuti distribusi ini
-    Contoh: Tinggi badan manusia
-    <img src="/assets/normal.png" alt="">
+Distribusi data adalah cara suatu data dalam dataset tersebar. Dengan memahami distribusi data, kita bisa mendapatkan hasil analisis yang akurat. Distribusi data itu sangat penting karena:
 
-- **Distribusi Uniform**
-    - Semua nilai dalam rentang tertentu memiliki probabilitas yang sama 
-    - Tidak memiliki puncak atau kecenderungan tertentu
-    Contoh: Hasil lemparan dadu yang adil
-    <img src="/assets/uniform.png" alt="">
+- Menentukan metode analisis yang tepat.
+- Mempengaruhi interpretasi hasil statistik.
+- Membantu mengidentifikasi pola dan memprediksi perilaku data di masa depan.
+- Meningkatkan validitas dan keandalan hasil analisis.
 
-- **Distribusi Eksponensial**
-    - Distribusi untuk waktu antara peristiwa yang terjadi secara acak 
-    - Banyak digunakan dalam analisis kegagalan dan waktu tunggu 
-    Contoh: Waktu antara kedatangan pelanggan di bank
-    <img src="/assets/eksponensial.png" alt="">
+Beberapa faktor utama yang digunakan untuk memahami distribusi:
+- **Mean**, **median**, dan **modus** → menunjukkan letak pusat data.
+- **Variance** dan **standard deviation** → menggambarkan sebaran data.
+- **Skewness** → menunjukkan kecenderungan distribusi (ke kiri atau kanan).
+- **Kurtosis** → menunjukkan tinggi atau rendahnya puncak distribusi.
 
-- **Distribusi Poisson**
-    - Digunakan untuk menghitung jumlah kejadian dalam interval tertentu 
-    - Berfokus pada jumlah kejadian yang jarang terjadi
-    Contoh: Jumlah panggilan ke layanan darurat dalam satu jam
-    <img src="/assets/poisson.png" alt="">
+---
 
-- **Distribusi Binomial**
-    - Digunakan untuk eksperimen dengan hasil sukses/gagal
-    - Memiliki parameter jumlah percobaan (n) dan probabilitas sukses (p) 
-    Contoh: Peluang mendapatkan kepala dalam 10 lemparan koin
-    <img src="/assets/binomial.png" alt="">
+## Daftar Isi
 
-## Apa itu Distribusi Normal?
-##### Distribusi normal atau yang biasa disebut distribusi *Gauss* adalah distribusi probabilitas yang memiliki bentuk lonceng (bell-shaped). Distribusi normal itu menjadi hal yang penting dalam proses pengambilan data, karena banyak metode statistik mengasumsikan data berdistribusi normal, teorema Limit Pusat: Data besar cenderung mengikuti distribusi normal, serta dengan adanya distribusi normal itu membantu kita dalam memprediksi dan mengambil keputusan berbasis data.
+- [Beberapa Jenis Hasil Distribusi Data](#beberapa-jenis-hasil-distribusi-data)
+- [Apa Itu Distribusi Normal?](#apa-itu-distribusi-normal)
+- [Visualisasi Distribusi Data](#visualisasi-distribusi-data)
+  - [Histogram](#histogram)
+  - [Boxplot](#boxplot)
+  - [QQ Plot](#qq-plot)
+- [Tugas Week 3](#tugas-week-3)
+- [Kesimpulan](#kesimpulan)
 
-## Selain itu, terdapat 3 visualisasi distribusi untuk melihat distribusi data:
-- **Histogram:**
-    Histogram adalah jenis grafik yang menampilkan distribusi frekuensi dari suatu variabel numerik.
-    Ciri-ciri Histogram berdistribusi normal:
-    - Bentuknya menyerupai lonceng simetris (bell-shaped).
-    - Puncaknya di tengah, kemudian menurun secara simetris ke kiri dan kanan.
-    - Sebagian besar data terkumpul di sekitar mean, dengan lebih sedikit data di ekor.
-    - Contoh Histogram Normal:
-    Jika data memiliki mean = 50 dan standar deviasi = 10, maka sebagian besar data berada di sekitar 50 dengan sedikit data di luar kisaran (30-70).
+---
 
-    <img src="/assets/Histon.png" alt="">
+## Beberapa Jenis Hasil Distribusi Data
 
-- **Boxplot:**
-    Boxplot adalah ringkasan distribusi sampel yang disajikan secara grafis yang bisa menggambarkan bentuk distribusi data (skewness), ukuran tendensi sentral dan ukuran penyebaran (keragaman) data pengamatan.
-    Ciri-ciri Boxplot berdistribusi normal:
-    - Median berada di tengah kotak (IQR).
-    - Panjang whisker kiri dan kanan kurang lebih sama.
-    - Tidak ada atau sedikit outlier (jika ada outlier, jumlahnya tidak terlalu banyak).
-    - Contoh Boxplot Normal:
-    Jika data normal, maka kotak akan seimbang, dengan median yang membagi kotak menjadi dua bagian yang hampir sama besar.
-    <img src="/assets/boxplotn.png" alt="">
+### 📌 Distribusi Normal
+- Bentuk lonceng, simetris di sekitar mean.
+- Mean, median, dan modus sama.
+- Banyak fenomena alam mengikuti distribusi ini.  
+Contoh: Tinggi badan manusia  
+<img src="/assets/normal.png" alt="Distribusi Normal">
 
-- **qqplot:**
-    QQ plot (*Quantile-Quantile plot*) adalah grafik yang digunakan untuk membandingkan distribusi dua set data dengan memplot kuantilnya terhadap satu sama lain.
-    Ciri-ciri qqplot berdistribusi normal:
-    - Titik-titik data mengikuti garis diagonal hampir secara sempurna.
-    - Tidak ada pola melengkung atau penyimpangan signifikan dari garis lurus.
-    - Pada bagian ekor (ujung kiri dan kanan), titik-titik tetap dekat garis tanpa menyimpang terlalu jauh.
-    - Contoh QQ Plot Normal:
-    Jika data normal, titik-titik pada QQ plot akan berjajar rapi di sepanjang garis lurus. Jika data tidak normal, akan ada pola melengkung atau penyimpangan di ujung ekor.
-    <img src="/assets/qqn.png" alt="">
+---
 
-## Tugas
-##### Pada week 3 ini kami diberikan tugas untuk melakukan distribusi data dengan menggunakan teknik visualisasi, dengan melakukan plot data menggunakan:
-1. Histogram
-2. BoxPlot
-3. QQ Plot 
+### 📌 Distribusi Uniform
+- Semua nilai dalam rentang tertentu memiliki probabilitas yang sama.
+- Tidak memiliki puncak atau kecenderungan.  
+Contoh: Hasil lemparan dadu  
+<img src="/assets/uniform.png" alt="Distribusi Uniform">
+
+---
+
+### 📌 Distribusi Eksponensial
+- Distribusi untuk waktu antara peristiwa acak.
+- Banyak digunakan dalam analisis kegagalan atau waktu tunggu.  
+Contoh: Waktu kedatangan pelanggan.  
+<img src="/assets/eksponensial.png" alt="Distribusi Eksponensial">
+
+---
+
+### 📌 Distribusi Poisson
+- Menghitung jumlah kejadian dalam suatu interval waktu/ruang tertentu.
+- Cocok untuk kejadian langka.  
+Contoh: Jumlah panggilan darurat per jam.  
+<img src="/assets/poisson.png" alt="Distribusi Poisson">
+
+---
+
+### 📌 Distribusi Binomial
+- Eksperimen dengan dua hasil: sukses/gagal.
+- Parameter: jumlah percobaan (n) dan probabilitas sukses (p).  
+Contoh: Peluang kepala dalam 10 lemparan koin.  
+<img src="/assets/binomial.png" alt="Distribusi Binomial">
+
+---
+
+## Apa Itu Distribusi Normal?
+
+Distribusi normal (distribusi *Gauss*) adalah distribusi probabilitas berbentuk lonceng (*bell-shaped*). 
+
+Distribusi ini penting karena:
+- Banyak metode statistik mengasumsikan distribusi normal.
+- Berdasarkan *Central Limit Theorem*, rata-rata dari banyak sampel akan cenderung normal.
+- Membantu prediksi dan pengambilan keputusan berbasis data.
+
+---
+
+## Visualisasi Distribusi Data
+
+### Histogram
+Menampilkan distribusi frekuensi variabel numerik.
+
+**Ciri histogram normal:**
+- Bentuk lonceng simetris.
+- Puncak di tengah dan menurun ke kiri-kanan.
+- Sebagian besar data berada di sekitar mean.
+
+**Contoh:**  
+Jika mean = 50, SD = 10, maka sebagian besar data antara 30–70.  
+<img src="/assets/Histon.png" alt="Histogram Normal">
+
+---
+
+### Boxplot
+Menampilkan ringkasan distribusi: pusat (median), sebaran (IQR), outlier.
+
+**Ciri boxplot normal:**
+- Median di tengah kotak.
+- Whisker kiri dan kanan seimbang.
+- Sedikit atau tanpa outlier.
+
+**Contoh:**  
+Kotak simetris, median membagi dua bagian hampir sama besar.  
+<img src="/assets/boxplotn.png" alt="Boxplot Normal">
+
+---
+
+### QQ Plot
+Membandingkan distribusi data dengan distribusi normal melalui kuantil.
+
+**Ciri QQ Plot normal:**
+- Titik mengikuti garis diagonal.
+- Tidak ada penyimpangan signifikan.
+- Titik ujung tetap dekat garis.
+
+**Contoh:**  
+Jika normal, titik sejajar lurus; jika tidak, akan melengkung.  
+<img src="/assets/qqn.png" alt="QQ Plot Normal">
+
+---
+
+## Tugas Week 3
+
+> Lakukan visualisasi distribusi data menggunakan:
+1. Histogram  
+2. Boxplot  
+3. QQ Plot
+
+---
 
 ## Kesimpulan
-##### Distribusi data merupakan fondasi penting dalam analisis statistik karena membantu kita memahami bagaimana data tersebar, pola yang muncul, dan bagaimana data tersebut dapat digunakan untuk pengambilan keputusan berbasis informasi. Pemahaman terhadap konsep distribusi seperti mean, median, modus, varian, standar deviasi, skewness, dan kurtosis sangat krusial dalam menginterpretasikan karakteristik data. Distribusi normal seringkali menjadi asumsi dasar dalam banyak metode statistik karena karakteristik simetrisnya.
 
-##### Visualisasi seperti histogram, boxplot, dan qqplot berperan penting untuk mengidentifikasi bentuk distribusi secara intuitif dan cepat, membantu menentukan apakah data sesuai dengan distribusi yang diasumsikan.
+Distribusi data adalah fondasi penting dalam analisis statistik. Memahami distribusi membantu:
 
-##### Dengan memahami dan mengenali distribusi data melalui teori dan visualisasi, kita dapat meningkatkan keakuratan analisis, memilih metode statistik yang tepat, serta meminimalkan kesalahan dalam pengambilan kesimpulan dari data.
+- Menentukan metode statistik yang tepat.
+- Mengenali pola dan karakteristik data.
+- Meningkatkan akurasi dan validitas analisis.
+
+Distribusi normal adalah asumsi umum dalam analisis statistik. Visualisasi seperti histogram, boxplot, dan QQ plot sangat membantu dalam mengenali bentuk distribusi sebelum melakukan uji statistik lanjutan.
+
+---
+
