--- a/_posts/2025-03-06-Week2.md
+++ b/_posts/2025-03-06-Week2.md
@@ -5,158 +5,75 @@ categories: [Chart, Statistik, Histogram]
 tags: ["Statitik dan Probabilitas", "Visualisasi Data", "R"]
 ---
 
-# Visualisasi Data
+#### Ini adalah proses untuk memudahkan identifikasi dan analisa dari data, dengan menafsirkan dan menyajikan data untuk menciptakan ide ide yang jelas. Dengan adanya visualisasi data, itu mempermudah setiap perusahaan dalam mempersiapkan data untuk melakukan komunikasi dengan klien maupun senior manager dalam melihat data yang penting bagi perusahaan, misal data penjualan bulanan dalam bentuk grafik batang atau garis. Visualisasi data dapat menjadi sebuah strategi bagi perusahaan dalam menginterpretasikan data untuk membuat keputusan dan menganalisa proses. Hal tersebut membuat Visualisasi data menjadi sangat penting dalam membuat laporan dan pernyataan. itu karenakan visualisasi data lebih atraktif dan simple, sehingga lebih mudah diingat oleh orang yang melihat data tersebut. 
 
-Visualisasi data adalah proses untuk memudahkan identifikasi dan analisis data dengan menyajikan data secara visual guna menciptakan pemahaman yang lebih jelas.  
-Visualisasi ini sangat penting karena:
+## Umumnya terdapat 3 aspek dalam laporan dan pernyataan yang terbantu melalui visualisasi data:
+- **Menjelaskan**
+    Visualisasi data membuka kesempatan bagi kita untuk menjelaskan sebuah pertanyaan lewat visual. 
+- **Mengeksplorasi**
+    Visual juga membuka peluang bagi kita agar dapat mengidentifikasi area yang paling menarik bagi kita.
+- **Menganalisis**
+    Visual membantu kita untuk memahami informasi penting, menemukan pola baru, atau memprediksi sesuatu yang akan terjadi.
 
-- Memudahkan komunikasi data dengan klien atau manajemen.
-- Menyederhanakan laporan yang kompleks menjadi lebih atraktif dan mudah diingat.
-- Membantu proses pengambilan keputusan yang berbasis data.
+## Terdapat 2 jenis data yang dapat divisualisasikan:
+- **Kuantitatif:**
+    Data berupa angka yang bisa diukur dan dihitung.
+- **Kualitatif:**
+    Data ini berupa ciri atau kategori.
 
----
+## Ada 11 macam format visualisasi data yang biasa digunakan:
+1. **Bar Chart**
+    Menampilkan data dalam bentuk batang vertikal atau horizontal atau bahkan full stack column. Cocok untuk membandingkan kategori satu dengan lainnya secara visual misal penjualan per produk.
+    <img src="/assets/Bar.png" alt="">
 
-## Daftar Isi
+2. **Histogram**
+    Untuk menunjukkan distribusi frekuensi dari data numerik yang kontinu, bukan kategori, cocok untuk melihat frekuensi tinggi badan atau nilai ujian. Terdapat 2 variasi histogram, yaitu Vartical dan Horizontal columns.
+    <img src="/assets/Histogram.png" alt="">
 
-- [Aspek Visualisasi Data](#aspek-visualisasi-data)
-- [Jenis Data yang Dapat Divisualisasikan](#jenis-data-yang-dapat-divisualisasikan)
-- [Format Visualisasi Data](#format-visualisasi-data)
-  - [1. Bar Chart](#1-bar-chart)
-  - [2. Histogram](#2-histogram)
-  - [3. Pie Chart](#3-pie-chart)
-  - [4. Scatter Plot](#4-scatter-plot)
-  - [5. Heat Maps](#5-heat-maps)
-  - [6. Line Chart](#6-line-chart)
-  - [7. Bubble Charts](#7-bubble-charts)
-  - [8. Radar Charts](#8-radar-charts)
-  - [9. Waterfall Charts](#9-waterfall-charts)
-  - [10. Tree Maps](#10-tree-maps)
-  - [11. Area Chart](#11-area-chart)
-- [Tugas Tambahan](#tugas-tambahan)
-- [Kesimpulan](#kesimpulan)
+3. **Pie Chart**
+    Menunjukkan proporsi data sebagai bagian dari keseluruhan dalam bentuk irisan lingkaran. Cocok untuk persentase pangsa pasar, alokasi anggaran. Ada 2 variasi, yaitu Standard pie chart Donut pie chart.
+    <img src="/assets/Pie.png" alt="">
 
----
+4. **Scatter Plot**
+    Untuk menampilkan hubungan antara dua variabel dalam bentuk titik-titik pada bidang koordinat. Cocok digunakan untuk melihat korelasi, seperti hubungan antara usia dan pendapatan, tinggi dan berat badan. Ada 2 jenis, yaitu Scatter plot dan Scatter plot with grid.
+    <img src="/assets/Scatter.png" alt="">
 
-## Aspek Visualisasi Data
+5. **Heat Maps**
+    Visualisasi menggunakan warna untuk menunjukkan kepadatan atau intensitas nilai dalam suatu area. Ddapat digunakan untuk melihat performa siswa per mata pelajaran atau kepadatan trafik situs web. Tersedia dalam 2 varian Mosaic diagram dan Color map.
+    <img src="/assets/Heat.png" alt="">
 
-Tiga aspek utama yang terbantu melalui visualisasi data:
+6. **Line Chart**
+    Menampilkan tren atau perubahan nilai dari waktu ke waktu dengan garis yang menghubungkan titik-titik data. Digunakan untuk tren harga saham, suhu harian, atau pertumbuhan pengguna. 
+    <img src="/assets/Line.png" alt="">
 
-- **Menjelaskan**  
-  Menyampaikan informasi atau menjawab pertanyaan melalui tampilan visual.
+7. **Bubble Charts**
+    Penambahan dimensi ketiga dari scatterplot. Contoh penggunaan pengeluaran (sumbu X), pendapatan (sumbu Y), dan populasi (ukuran gelembung). Ada 2 jenis yaitu Bubble plot dan Bubble Map
+    <img src="/assets/Bubble.png" alt="">
 
-- **Mengeksplorasi**  
-  Mengidentifikasi area penting dan menarik dari data.
+8. **Radar Charts**
+    Menampilkan chart dalam bentuk jaring laba laba. Seringkali digunakan untuk membandingkan beberapa item berdasarkan beberapa kriteria, seperti performa atlet atau fitur produk.
+    <img src="/assets/Radar.png" alt="">
 
-- **Menganalisis**  
-  Memahami pola, mengungkap insight, dan memprediksi tren data.
+9. **Waterfall Charts**
+    Untuk menunjukkan perubahan nilai dari satu titik ke titik lain secara bertahap, digunakan untuk Melacak kontribusi positif dan negatif terhadap total akhir, seperti dalam analisis keuntungan atau arus kas.
+    <img src="/assets/Waterfall.png" alt="">
 
----
+10. **Tree Maps**
+    Menampilkan data hierarkis dalam bentuk kotak bertingkat yang ukurannya proporsional mewakili nilai. Sering digunakan untuk menganalisis kontribusi berbagai bagian dalam satu kelompok besar, seperti komposisi pasar saham berdasarkan sektor industri.
+    <img src="/assets/Tree.png" alt="">
 
-## Jenis Data yang Dapat Divisualisasikan
-
-- **Kuantitatif**  
-  Data berbentuk angka yang bisa dihitung dan diukur.
-
-- **Kualitatif**  
-  Data berupa kategori atau ciri yang tidak bisa dihitung secara numerik.
-
----
-
-## Format Visualisasi Data
-
-### 1. Bar Chart
-- Menampilkan perbandingan kategori dalam bentuk batang vertikal/horizontal.
-- Cocok untuk membandingkan nilai antar produk, wilayah, dsb.  
-<img src="/assets/Bar.png" alt="Bar Chart">
-
----
-
-### 2. Histogram
-- Menampilkan distribusi frekuensi dari data numerik kontinu.
-- Cocok untuk tinggi badan, nilai ujian, dsb.  
-<img src="/assets/Histogram.png" alt="Histogram">
-
----
-
-### 3. Pie Chart
-- Menampilkan proporsi bagian terhadap keseluruhan dalam bentuk lingkaran.
-- Cocok untuk pangsa pasar, alokasi anggaran.  
-<img src="/assets/Pie.png" alt="Pie Chart">
-
----
-
-### 4. Scatter Plot
-- Menampilkan hubungan antara dua variabel dalam bentuk titik-titik.
-- Cocok untuk melihat korelasi seperti tinggi vs berat.  
-<img src="/assets/Scatter.png" alt="Scatter Plot">
-
----
-
-### 5. Heat Maps
-- Menggunakan warna untuk menunjukkan kepadatan/intensitas nilai.
-- Cocok untuk analisis performa, trafik, dsb.  
-<img src="/assets/Heat.png" alt="Heat Map">
-
----
-
-### 6. Line Chart
-- Menampilkan tren atau perubahan nilai dari waktu ke waktu.
-- Cocok untuk harga saham, pertumbuhan pengguna, dll.  
-<img src="/assets/Line.png" alt="Line Chart">
-
----
-
-### 7. Bubble Charts
-- Mirip scatter plot, tapi menambahkan ukuran gelembung sebagai dimensi ketiga.
-- Contoh: pengeluaran vs pendapatan vs populasi.  
-<img src="/assets/Bubble.png" alt="Bubble Chart">
-
----
-
-### 8. Radar Charts
-- Menampilkan perbandingan banyak variabel dalam bentuk jaring laba-laba.
-- Cocok untuk membandingkan performa atau fitur.  
-<img src="/assets/Radar.png" alt="Radar Chart">
-
----
-
-### 9. Waterfall Charts
-- Menunjukkan perubahan nilai secara bertahap menuju total akhir.
-- Cocok untuk arus kas atau keuntungan.  
-<img src="/assets/Waterfall.png" alt="Waterfall Chart">
-
----
-
-### 10. Tree Maps
-- Visualisasi hierarki dalam bentuk kotak bertingkat.
-- Cocok untuk kontribusi sektor industri terhadap total.  
-<img src="/assets/Tree.png" alt="Tree Map">
-
----
-
-### 11. Area Chart
-- Mirip line chart, tetapi dengan area bawah diarsir untuk menunjukkan volume.
-- Cocok untuk akumulasi data seperti pengeluaran atau konsumsi.  
-<img src="/assets/Area2.png" alt="Area Chart 1">  
-<img src="/assets/Area1.png" alt="Area Chart 2">
-
----
+11. **Area Chart**
+    Mirip seperti line chart, tetapi dengan area di bawah garis yang diarsir untuk menekankan volume. Ini dapat membantu menunjukkan akumulasi nilai dari waktu ke waktu, seperti total pengeluaran bulanan atau penggunaan energi. Ada 3 jenis Standar Area, Stacked Area, dan 100% stacked area. 
+    <img src="/assets/Area2.png" alt="">
+    <img src="/assets/Area1.png" alt="">
 
 ## Tugas Tambahan
-
-> Mahasiswa diminta untuk mengvisualisasikan data menggunakan **R** dan memilih jenis grafik sesuai dengan karakteristik datanya.
-
----
+##### Mahasiswa diminta untuk mengvisualisasi data dengan menggunakan R.
 
 ## Kesimpulan
+##### Visualisasi data adalah alat untuk membantu mengomunikasikan informasi secara efektif dan membantu dalam pengambilan keputusan. Dengan menggunakan berbagai jenis grafik seperti bar chart, line chart, pie chart, dan lainnya, kita dapat mengubah data yang kompleks menjadi visual yang mudah dipahami. Proses ini membantu dalam menjelaskan, mengeksplorasi, dan menganalisis data dengan cara yang lebih intuitif.Selain itu, ada dua jenis data yang dapat divisualisasikan, yaitu kuantitatif dan kualitatif, yang masing-masing memiliki teknik visualisasi yang sesuai. Selain itu, beragam format visualisasi dapat digunakan untuk berbagai tujuan, baik untuk membandingkan, menunjukkan distribusi, menganalisis hubungan antar variabel, maupun untuk memahami perubahan data dari waktu ke waktu.
 
-Visualisasi data adalah alat penting dalam:
+##### Penggunaan visualisasi data yang tepat tidak hanya mempermudah pemahaman tetapi juga meningkatkan daya tarik dan daya ingat terhadap informasi yang disajikan. Oleh karena itu, setiap perusahaan atau organisasi yang ingin mengambil keputusan berbasis data perlu memanfaatkan visualisasi data dengan optimal.
 
-- Menyampaikan informasi secara efektif
-- Membantu analisis dan pengambilan keputusan
-- Meningkatkan pemahaman dan daya tarik data
 
-Beragam jenis visualisasi seperti bar chart, line chart, pie chart, dan lainnya memungkinkan penyajian data yang kompleks menjadi lebih sederhana, atraktif, dan mudah diinterpretasi.  
-Pemilihan visualisasi yang tepat akan meningkatkan akurasi, efisiensi, serta memudahkan komunikasi data pada semua level organisasi.
 
----
